--- a/scss/layout/_services.scss
+++ b/scss/layout/_services.scss
@@ -44,23 +44,23 @@
 }
 
 .view-our-work-mobile {
-  display: flex;
-  align-items: center;
-  justify-content: center;
-  gap: 8px;
-  font-size: 1.625rem;
-  color: $primary-dark;
-  text-decoration: none;
-  font-weight: 600;
-  border-bottom: 3px solid transparent;
-  margin-top: 32px;
-  padding-bottom: 5px;
-  width: fit-content;
-  margin-left: auto;
-  margin-right: auto;
+  display: none; // Hidden by default
   
-  @media (min-width: $brk-point-s) {
-    display: none; // Hide at 768px and above
+  @media (max-width: 767px) {
+    display: flex; // Show only on 767px and below
+    align-items: center;
+    justify-content: center;
+    gap: 8px;
+    font-size: 1.625rem;
+    color: $primary-dark;
+    text-decoration: none;
+    font-weight: 600;
+    border-bottom: 3px solid transparent;
+    margin-top: 32px;
+    padding-bottom: 5px;
+    width: fit-content;
+    margin-left: auto;
+    margin-right: auto;
   }
   
   .fa-arrow-right {
